--- a/Eticaret/Views/Home/Index.cshtml
+++ b/Eticaret/Views/Home/Index.cshtml
@@ -1,31 +1,65 @@
-﻿@{
+﻿@using Eticaret.Models;
+@{
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="p-5 mb-4 text-bg-dark rounded-3 text-center" style="background-color:antiquewhite">
+    <h1>ASP.NET MVC ETicaret Projesi</h1>
 </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <h2>Kategoriler</h2>
+            <ul style="list-style:none;">
+                @foreach (Kategoriler item in (List<Kategoriler>)ViewBag.Kategoriler)
+                {
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                    <li class="list-group-item">@Html.ActionLink(item.KategoriAdi, "Kategori", new { id = item.KategoriID })</li>
+
+                }
+            </ul>
+        </div>
+
+        <div class="col-md-9">
+            <h2>Ürünler</h2>
+            <div class="row">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    @foreach (Urunler item in (List<Urunler>)ViewBag.Urunler)
+                    {
+
+                        <div class="col">
+                            <div class="card">
+                                <img src="/Resim/@(item.UrunID+".jpg")" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">@item.UrunAdi</h5>
+                                    <p>
+                                        <a href="/Home/Urun/@item.UrunID" class="btn btn-default">
+                                            Ürün Detay &raquo;
+                                        </a>
+                                        <span style="float:right;color:red;font-size:15px;font-weight:bold">@item.UrunFiyati TL</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        @*<div class="col-md-4" style="border:2px solid">
+                <h5>@item.UrunAdi</h5>
+                <img src="/Resim/@(item.UrunID+".jpg")" style="width:50%;" />
+
+                <p>
+                    <a href="/Home/Urun/@item.UrunID" class="btn btn-default">
+                        Ürün Detay &raquo;
+                    </a>
+                    <span style="float:right;color:red;font-size:15px;font-weight:bold">@item.UrunFiyati TL</span>
+                </p>
+
+            </div>*@
+
+                    }
+
+                </div>
+
+                </div>
+        </div>
     </div>
 </div>
