--- a/Eticaret/Views/Urunler/Create.cshtml
+++ b/Eticaret/Views/Urunler/Create.cshtml
@@ -3,13 +3,15 @@
 @{
     ViewBag.Title = "Create";
 }
-
+@*dosya gönderebilmemiz için enctype ı kullandık*@
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Urunler", FormMethod.Post, new { enctype = "multipart/form-data" }))
+
+
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Urunler</h4>
         <hr />
@@ -46,14 +48,25 @@
             </div>
         </div>
 
+        @*<div class="form-group">
+                <label class="control-label col-md-2">Ürün Resim</label>
+                <div class="col-md-10">
+                    <input type="file" id="urunResim" name="urunResim" class="form-control" />
+                </div>
+            </div>*@
+
+        <div class="mb-3">
+            <label for="urunResim" class="form-label">Ürün Resim</label>
+            <input type="file" class="form-control" id="urunResim" name="urunResim" />
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-danger" />
             </div>
         </div>
     </div>
-}
 
+}
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
