--- a/Eticaret/Views/Home/Kategori.cshtml
+++ b/Eticaret/Views/Home/Kategori.cshtml
@@ -5,50 +5,48 @@
     ViewBag.Title = kat.KategoriAdi;
 }
 
-
-<div class="jumbotron">
+<div class="p-5 mb-4 text-bg-dark rounded-3 text-center" style="background-color:antiquewhite">
     <h1>ASP.NET MVC ETicaret Projesi</h1>
 </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <h2>Kategoriler</h2>
+            <ul style="list-style:none;">
+                @foreach (Kategoriler item in (List<Kategoriler>)ViewBag.Kategoriler)
+                {
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Kategoriler</h2>
-        <ul style="list-style:none;">
-            @foreach (Kategoriler item in (List<Kategoriler>)ViewBag.Kategoriler)
-            {
-                <li>
-                    @Html.ActionLink(item.KategoriAdi, "Kategori", new { id = item.KategoriID })
-                </li>
-            }
-        </ul>
-    </div>
+                    <li class="list-group-item-action">@Html.ActionLink(item.KategoriAdi, "Kategori", new { id = item.KategoriID })</li>
 
-    <div class="col-md-9">
-        <h2>Ürünler</h2>
-        <div class="row">
-            @foreach (Urunler item in Model)
-            {
-                <div class="col-md-4" style="border:2px solid">
-                    <h5>@item.UrunAdi</h5>
-                    <img src="/Resim/@(item.UrunID+".jpg")" style="width:50%;" />
-
-                    <p>
-                        <a href="/Home/Urun/@item.UrunID" class="btn btn-default">
-                            Ürün Detay &raquo;
-                        </a>
-                        <span style="float:right;color:red;font-size:15px;font-weight:bold">@item.UrunFiyati TL</span>
-                    </p>
-
-                </div>
-                <div class="col-md-2">
-
-                </div>
-            }
-
+                }
+            </ul>
         </div>
+        <div class="col-md-9">
+            <h2>Ürünler</h2>
+            <div class="row">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    @foreach (Urunler item in Model)
+                    {
+                        <div class="col">
+                            <div class="card" style="width: 18rem; height:stretch">
+                                <img style="height:180px" src="/Resim/@(item.UrunID+".jpg")" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">@item.UrunAdi</h5>
+                                    <p>
+                                    <p class="card-text">@item.UrunAciklamasi</p>
+                                    <a href="/Home/Urun/@item.UrunID" class="btn btn-success">
+                                        Ürün Detay &raquo;
+                                    </a>
+                                    <span style="float:right;color:red;font-size:15px;font-weight:bold">@item.UrunFiyati TL</span>
+                                </div>
+                            </div>
+                        </div>
+                    }
+
+                </div>
+            </div>
+            </div>
 
     </div>
-
 </div>
-
 
